[project]
name = "similarity-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=1.0.4",
    "httpx>=0.28.1",
    "matplotlib>=3.10.1",
    "openai>=1.72.0",
    "pydantic>=2.11.3",
    "streamlit>=1.44.1",
    "pysqlite3-binary>=0.5.2",
]
